--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-/* FOOTER */
+/* Color navbar */
+.navbar-custom {
+    background-color: #568f8f;
+}
+
 /* Color del footer */
 .footer_color {
     background-color: #568f8f;
